# dbt-runner

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
docs/: getting_started_with_dbt.md  release_notes.md
fw_gear_dbt_runner/: config.py  main.py  parser.py  storage.py  validation.py
fw_gear_skeleton/: main.py  parser.py
scripts/: test_fw_dataset_loading.py
tests/: test_main.py  test_parser.py  test_validation.py
