[project]
name = "fw-gear-dbt-runner"
version = "0.1.0"
description = "Run dbt projects on Flywheel datasets stored in external storage"
authors = [{ name = "Flywheel", email = "support@flywheel.io" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears",
    "dbt",
    "data transformation",
]
classifiers = ["Topic :: Scientific/Engineering"]
dependencies = [
    "flywheel-sdk>=18,<19",
    "fw-gear>=0.3.0,<0.4",
    "dbt-core>=1.9.0,<2.0",
    "dbt-duckdb>=1.9.0,<2.0",
    "fw-storage>=3,<4",
    "fw-client>=2,<3",
]

[project.urls]
Repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/dbt-runner"

[dependency-groups]
dev = [
    "pytest>=6.1.2,<7",
    "pytest-cov>=3.0.0,<4",
    "pytest-mock>=3.8.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fw_gear_dbt_runner"]

[tool.ruff]
lint.ignore-init-module-imports = true
